<resources>
    <string name="app_name">Movie Reviews</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_add">add</string>
    <string name="title_hint">Title</string>
    <string name="review_hint">Review</string>
    <string name="rating_text">Your Rating (1.00 - 10.00):</string>
    <string name="recommend_question_text">Would you recommend watching it?</string>
    <string name="recommend_text">Recommend</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>

    <string name="settings_title">Settings</string>
    <string name="theme_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
</resources>